--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -53,3 +53,8 @@ jobs:
           name: software-bill-of-materials
           path: sbom.json
           retention-days: 7
+      - name: Upload SBOM Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: software-bill-of-materials
+          path: sbom.json
