--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -13,15 +13,15 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 1. SCAN FOR SECRETS (Detects leaked API keys/passwords)
+      # 1. SCAN FOR SECRETS
       - name: Gitleaks Scan
         uses: gitleaks/gitleaks-action@v2
-        continue-on-error: true # Ensures we still get the SBOM if secrets are found
+        continue-on-error: true 
 
-      # 2. SCAN DEPENDENCIES (SCA - Checks package.json)
+      # 2. SCAN DEPENDENCIES (SCA)
       - name: Snyk SCA Scan
         uses: snyk/actions/node@master
-        continue-on-error: true # Keeps the pipeline running so we can download results
+        continue-on-error: true 
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
@@ -29,11 +29,10 @@ jobs:
       - name: Build Local Image
         run: docker build -t my-secure-app .
 
-      # 4. SCAN CONTAINER IMAGE (Checks OS-level bugs)
+      # 4. SCAN CONTAINER IMAGE
       - name: Trivy Container Scan
         uses: aquasecurity/trivy-action@master
-        continue-on-error: true
-        continue-on-error: true # Essential for 2026 audit workflows
+        continue-on-error: true 
         with:
           image-ref: 'my-secure-app'
           format: 'table'
@@ -46,15 +45,10 @@ jobs:
           format: 'cyclonedx-json'
           output-file: 'sbom.json'
 
-      # 6. UPLOAD SBOM FOR DOWNLOAD (This is where your file is!)
+      # 6. UPLOAD SBOM FOR DOWNLOAD
       - name: Upload SBOM Artifact
         uses: actions/upload-artifact@v4
         with:
           name: software-bill-of-materials
           path: sbom.json
           retention-days: 7
-      - name: Upload SBOM Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: software-bill-of-materials
-          path: sbom.json
